v5.5.1 : Fix "previous/next month" not being visible in a book process when using Elementor

--- a/css/themes/base.css
+++ b/css/themes/base.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+/*** BOOK PROCESSES ***/
+.bookprocess .react-datepicker__navigation {
+    display: flex; /* Fix Elementor overriding this to block */
+}
+
 /*** ONLINE BOOKING ***/
 .recras-contactform-required::after {
     content: '*';
